[package]
name = "winapi-testing"
version = "0.1.0"
authors = ["linde12 <lindeoscar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }
# enigo = "0.0.14"
# winapi = "*"
# user32-sys = "0.2.0"
# winmm-sys = "*"
# kernel32-sys = "*"
